--- a/forum.css
+++ b/forum.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #2B2A4C;
-    --secondary-color: #EA906C;
-    --accent-color: #B31312;
+    --secondary-color: #DA70D6;
+    --accent-color: #ad0fad	;
     --background-color: #EEE2DE;
     --text-color: #1E1E1E;
     --gradient-primary: linear-gradient(135deg, #2B2A4C 0%, #1A1A2E 100%);
