--- a/projeto-integrador.css
+++ b/projeto-integrador.css
@@ -32,7 +32,7 @@ body {
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid var(--text-color);
+    border-bottom: 2px solid var(--secondary-color);
     background-color: rgba(238, 226, 222, 0.9);
 }
 
