--- a/perfil.css
+++ b/perfil.css
@@ -105,7 +105,7 @@ body {
     align-items: center;
     cursor: pointer;
     transition: all 0.3s ease;
-    box-shadow: 0 2px 8px rgba(179, 19, 18, 0.3);
+    box-shadow: 0 2px 8px rgba(70, 33, 33, 0.3);
 }
 
 .nav-links a:hover::after {
@@ -380,6 +380,39 @@ body {
 .submit-btn:hover::after {
     transform: translate(-50%, -50%) scale(1);
     opacity: 0;
+}
+
+.import-btn {
+    background: var(--accent-color);
+    color: white;
+    border: none;
+    padding: 0.8rem 2rem;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    box-shadow: 0 4px 15px rgba(179, 19, 18, 0.3);
+    display: inline-flex;
+    align-items: center;
+    gap: 0.8rem;
+    text-align: center;
+    margin-right: 1rem;
+}
+
+.import-btn:hover {
+    background: var(--secondary-color);
+    transform: translateY(-2px) scale(1.02);
+    box-shadow: 0 6px 20px rgba(179, 19, 18, 0.4);
+}
+
+.import-btn i {
+    font-size: 1.2rem;
+    transition: transform 0.3s ease;
+}
+
+.import-btn:hover i {
+    transform: rotate(-10deg) scale(1.1);
 }
 
 /* Responsividade */
